--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository":{
     "type":"git",
-    "url":"https://github.com/Peffery/getgas.git"
+    "url":"https://github.com/Peffery/getgasprice.git"
 },
   "keywords": [
     "eth"
